<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!-- Header text for the list of toppings [CHAR LIMIT=20]-->
    <string name="toppings">Toppings</string>

    <string name="whipped_cream">Whipped Cream</string>

    <string name="chocolate">Chocolate</string>

    <string name="quantity">quantity</string>

    <string name="thank_you">Thank you!</string>

    <string name="order">Order</string>

    <string name="order_summary">Order Summary</string>

    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
